--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -2,6 +2,8 @@ $cream-white: rgb(235, 235, 235);
 
 $near-black: rgb(22, 22, 22);
 
+$light-snippet-line-number: rgb(192, 192, 192);
+
 $light-swift: rgb(134, 134, 134);
 $light-accent-comment: rgb(109, 109, 109);
 $light-accent-barbie-pink: rgb(255, 86, 158);
