--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -1,7 +1,8 @@
-$cream-white: rgb(235, 235, 235);
+$light-background: rgb(240, 240, 240);
+$light-foreground: rgb(22, 22, 22);
+$light-foreground-semi: rgb(112, 112, 112);
 
-$near-black: rgb(22, 22, 22);
-
+$light-code-well: rgb(233, 233, 233);
 $light-snippet-line-number: rgb(192, 192, 192);
 
 $light-swift: rgb(134, 134, 134);
