improve display of generic constraints

--- a/Assets/css/Main.css
+++ b/Assets/css/Main.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 pre {
   margin: 2rem 0 2rem;
   line-height: 1.5rem;
@@ -83,17 +83,22 @@ section.introduction div.eyebrows {
 section.introduction div.eyebrows .phylum {
   flex: 1;
 }
-section.introduction div.eyebrows .version:after {
+section.introduction div.eyebrows span.module span.culture:before,
+section.introduction div.eyebrows span.module span.culture:after {
+  margin: 0 0.2rem;
+}
+section.introduction div.eyebrows span.module span.culture:before {
+  content: "(";
+}
+section.introduction div.eyebrows span.module span.culture .version:last-child:after {
+  content: "";
+  padding: 0;
+}
+section.introduction div.eyebrows span.module span.culture .version:after {
   content: ":";
   padding: 0 0.25rem;
 }
-section.introduction div.eyebrows .module > a:last-child {
-  margin-left: 0.25rem;
-}
-section.introduction div.eyebrows .module > a:last-child:before {
-  content: "(";
-}
-section.introduction div.eyebrows .module > a:last-child:after {
+section.introduction div.eyebrows span.module span.culture:after {
   content: ")";
 }
 
@@ -135,6 +140,59 @@ section.parameters dl dt:before {
   min-width: 3rem;
   color: rgb(192, 192, 192);
   font-weight: normal;
+}
+
+section.extension code.constraints {
+  line-height: 1.6rem;
+  color: rgb(134, 134, 134);
+  font-size: inherit;
+  display: block;
+  text-indent: -3.6rem;
+  margin-left: 3.6rem;
+}
+section.extension code.constraints span.syntax-keyword {
+  color: rgb(109, 109, 109);
+}
+section.extension code.constraints span.syntax-type,
+section.extension code.constraints span.syntax-typealias {
+  color: rgb(255, 123, 0);
+  font-weight: 500;
+}
+section.extension code.constraints span.syntax-type a,
+section.extension code.constraints span.syntax-typealias a {
+  color: inherit;
+}
+
+section.extension ul,
+section.superforms ul {
+  padding: 0;
+  list-style-type: none;
+}
+section.extension ul > li,
+section.superforms ul > li {
+  margin: 1rem 0 1rem 0;
+  padding: 0;
+}
+section.extension ul > li a,
+section.superforms ul > li a {
+  display: block;
+  text-indent: -2.5rem;
+  margin-left: 2.5rem;
+  line-height: 1.5rem;
+  font-family: "IBM Plex Mono", monospace;
+  color: rgb(109, 109, 109);
+  font-size: inherit;
+  padding: 0.8em 0 0 0;
+}
+section.extension ul > li a span.syntax-identifier,
+section.superforms ul > li a span.syntax-identifier {
+  color: rgb(253, 39, 99);
+}
+section.extension ul > li p,
+section.superforms ul > li p {
+  padding: 0 0 0 2.5rem;
+  line-height: 1.3rem;
+  font-size: 87.5%;
 }
 
 h1, h2, h3, h4 {
@@ -240,6 +298,10 @@ body main section.details aside {
   max-width: 41rem;
 }
 
+section.extension ul > li > p {
+  max-width: 40rem;
+}
+
 a {
   color: rgb(253, 39, 99);
   text-decoration: none;
@@ -248,14 +310,6 @@ a {
 a:hover, a:focus {
   text-decoration: underline;
   text-underline-offset: 0.35em;
-}
-
-body main section.extension ul > li a {
-  font-family: "IBM Plex Mono", monospace;
-  color: rgb(109, 109, 109);
-}
-body main section.extension ul > li a span.syntax-identifier {
-  color: rgb(253, 39, 99);
 }
 
 /*# sourceMappingURL=Main.css.map */
