--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -1,3 +1,34 @@
+nav.decl
+{
+    padding: 0.5rem 0;
+}
+nav.decl div.breadcrumbs
+{
+    color: $light-swift;
+    font-family: $typeface-monospace;
+    font-weight: 500;
+    font-size: 90.625%;
+
+    a
+    {
+        color: $light-foreground-semi;
+    }
+
+    > *:first-child
+    {
+        margin-left: 0;
+    }
+    > *
+    {
+        margin: 0 0.2rem;
+    }
+    > *:last-child
+    {
+        margin-right: 0;
+        color: $light-foreground;
+    }
+}
+
 section.introduction
 {
     margin-top: 4rem;
