--- a/Assets/css/Main.css
+++ b/Assets/css/Main.css
@@ -95,7 +95,7 @@ nav.decl div.breadcrumbs > *:last-child {
 
 section.introduction {
   margin-top: 4rem;
-  padding: 0 0 1rem;
+  padding: 0 0 0.75rem;
   border-bottom: 2px solid rgb(253, 39, 99);
 }
 section.introduction div.eyebrows {
@@ -124,6 +124,17 @@ section.introduction div.eyebrows span.module span.culture .version:after {
 }
 section.introduction div.eyebrows span.module span.culture:after {
   content: ")";
+}
+section.introduction a.source {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 500;
+  font-size: 87.5%;
+  color: rgb(112, 112, 112);
+  text-decoration-color: rgb(253, 39, 99);
+}
+section.introduction a.source span.file,
+section.introduction a.source span.line {
+  color: rgb(253, 39, 99);
 }
 
 section.declaration pre {
