--- a/Assets/css/Main.css
+++ b/Assets/css/Main.css
@@ -127,10 +127,12 @@ section.introduction div.eyebrows span.module span.culture:after {
 }
 section.introduction a.source {
   font-family: "IBM Plex Mono", monospace;
-  font-weight: 500;
   font-size: 87.5%;
   color: rgb(112, 112, 112);
   text-decoration-color: rgb(253, 39, 99);
+}
+section.introduction a.source span.file {
+  font-weight: 500;
 }
 section.introduction a.source span.file,
 section.introduction a.source span.line {
