--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -39,7 +39,7 @@ section.superforms
         margin: 0.5rem 0 0.5rem 0;
         padding: 0;
 
-        a
+        > a
         {
             display: block;
             text-indent: -2.5rem;
