improve sorting and organization of related symbols on decl pages

--- a/Assets/css/Main.css
+++ b/Assets/css/Main.css
@@ -108,6 +108,9 @@ section.introduction div.eyebrows {
 section.introduction div.eyebrows .phylum {
   flex: 1;
 }
+section.introduction div.eyebrows .phylum .kink {
+  font-weight: 600;
+}
 section.introduction div.eyebrows span.module span.culture:before,
 section.introduction div.eyebrows span.module span.culture:after {
   margin: 0 0.2rem;
@@ -201,6 +204,37 @@ section.group code.constraints span.syntax-typealias a {
   color: inherit;
 }
 
+section.group h2 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+section.group h2 + h3,
+section.group code.constraints + h3 {
+  margin-top: 1rem;
+}
+
+section.group h2 + h3 {
+  border-top: solid 1px rgb(255, 86, 158);
+}
+
+section.group code.constraints + h3 {
+  border-top: solid 1px rgb(255, 123, 0);
+}
+
+section.group h3 {
+  margin-top: 1rem;
+  border-top: dashed 1px rgb(112, 112, 112);
+  padding-top: 0.75rem;
+  font-weight: 600;
+  color: rgb(112, 112, 112);
+}
+
+section.group ul {
+  padding: 0;
+  margin-bottom: 3rem;
+  list-style-type: none;
+}
 section.group ul > li.article {
   margin: 0.5rem 0 0.5rem 0;
 }
@@ -216,23 +250,13 @@ section.group ul > li.article a:first-child h3 {
 section.group ul > li.article a.read-more {
   font-style: italic;
 }
-
-section.group ul,
-section.superforms ul {
-  padding: 0;
-  list-style-type: none;
-}
 section.group ul > li.decl,
-section.group ul > li.module,
-section.superforms ul > li.decl,
-section.superforms ul > li.module {
+section.group ul > li.module {
   margin: 0.5rem 0 0.5rem 0;
   padding: 0;
 }
 section.group ul > li.decl > a,
-section.group ul > li.module > a,
-section.superforms ul > li.decl > a,
-section.superforms ul > li.module > a {
+section.group ul > li.module > a {
   display: block;
   text-indent: -2.5rem;
   margin-left: 2.5rem;
@@ -243,15 +267,11 @@ section.superforms ul > li.module > a {
   padding: 0.8em 0 0 0;
 }
 section.group ul > li.decl > a span.syntax-identifier,
-section.group ul > li.module > a span.syntax-identifier,
-section.superforms ul > li.decl > a span.syntax-identifier,
-section.superforms ul > li.module > a span.syntax-identifier {
+section.group ul > li.module > a span.syntax-identifier {
   color: rgb(253, 39, 99);
 }
 section.group ul > li.decl p,
-section.group ul > li.module p,
-section.superforms ul > li.decl p,
-section.superforms ul > li.module p {
+section.group ul > li.module p {
   padding: 0 0 0 2.5rem;
   line-height: 1.3rem;
   font-size: 90.625%;
