--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -46,6 +46,11 @@ section.introduction
         .phylum
         {
             flex: 1;
+
+            .kink
+            {
+                font-weight: 600;
+            }
         }
 
 
